--- a/fisu-app/Base.lproj/Main.storyboard
+++ b/fisu-app/Base.lproj/Main.storyboard
@@ -42,16 +42,16 @@
             </objects>
             <point key="canvasLocation" x="1693" y="-224"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Table View Controller Events-->
         <scene sceneID="bkm-cN-Dmx">
             <objects>
-                <tableViewController id="ONL-Rj-MZ3" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="69" sectionHeaderHeight="28" sectionFooterHeight="28" id="JM2-a3-r1v">
+                <tableViewController id="ONL-Rj-MZ3" customClass="TableViewControllerEvents" customModule="fisu_app" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="69" sectionHeaderHeight="28" sectionFooterHeight="28" id="JM2-a3-r1v" userLabel="Table View Events">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EventsCell" rowHeight="69" id="U5A-QO-XXH">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EventsCell" rowHeight="69" id="U5A-QO-XXH" customClass="EventsTableViewCell" customModule="fisu_app" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="92" width="600" height="69"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="U5A-QO-XXH" id="tM2-TV-RHX">
@@ -74,20 +74,25 @@
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" onImage="delete" offImage="add" translatesAutoresizingMaskIntoConstraints="NO" id="NFQ-sv-hG9">
+                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" onImage="delete" offImage="add" translatesAutoresizingMaskIntoConstraints="NO" id="7Mq-5V-DfF">
                                             <rect key="frame" x="543" y="18" width="51" height="31"/>
                                         </switch>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="Tb1-8X-tA7" firstAttribute="leading" secondItem="xCZ-mX-93y" secondAttribute="leading" id="5ZU-6o-kW6"/>
                                         <constraint firstItem="Tb1-8X-tA7" firstAttribute="top" secondItem="xCZ-mX-93y" secondAttribute="bottom" constant="8" id="O6s-H8-eEj"/>
-                                        <constraint firstItem="NFQ-sv-hG9" firstAttribute="trailing" secondItem="tM2-TV-RHX" secondAttribute="trailingMargin" id="S2K-Vj-58v"/>
                                         <constraint firstItem="xCZ-mX-93y" firstAttribute="top" secondItem="tM2-TV-RHX" secondAttribute="topMargin" id="TBi-it-h3N"/>
+                                        <constraint firstItem="7Mq-5V-DfF" firstAttribute="trailing" secondItem="tM2-TV-RHX" secondAttribute="trailingMargin" id="ULz-49-fdF"/>
                                         <constraint firstItem="Tb1-8X-tA7" firstAttribute="trailing" secondItem="xCZ-mX-93y" secondAttribute="trailing" id="Ylk-2d-zRb"/>
                                         <constraint firstItem="xCZ-mX-93y" firstAttribute="leading" secondItem="tM2-TV-RHX" secondAttribute="leadingMargin" id="b2f-2f-BCQ"/>
-                                        <constraint firstItem="NFQ-sv-hG9" firstAttribute="centerY" secondItem="tM2-TV-RHX" secondAttribute="centerY" id="nxU-PA-D8A"/>
+                                        <constraint firstItem="7Mq-5V-DfF" firstAttribute="centerY" secondItem="tM2-TV-RHX" secondAttribute="centerY" id="iFr-qz-sZk"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="addRemSwitch" destination="7Mq-5V-DfF" id="MdH-K3-5XY"/>
+                                    <outlet property="dateLabel" destination="Tb1-8X-tA7" id="9PP-Bi-myl"/>
+                                    <outlet property="nameLabel" destination="xCZ-mX-93y" id="OuA-9O-gL7"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -95,6 +100,9 @@
                             <outlet property="delegate" destination="ONL-Rj-MZ3" id="gtr-Ap-eUs"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <outlet property="tableViewEvents" destination="JM2-a3-r1v" id="JS7-UZ-2V8"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="35u-pH-bmK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
