--- a/fisu-app/Base.lproj/Main.storyboard
+++ b/fisu-app/Base.lproj/Main.storyboard
@@ -92,6 +92,7 @@
                                     <outlet property="addRemSwitch" destination="7Mq-5V-DfF" id="MdH-K3-5XY"/>
                                     <outlet property="dateLabel" destination="Tb1-8X-tA7" id="9PP-Bi-myl"/>
                                     <outlet property="nameLabel" destination="xCZ-mX-93y" id="OuA-9O-gL7"/>
+                                    <segue destination="bna-nM-z1m" kind="show" identifier="eventDescription" id="adU-Bo-MVl"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -107,6 +108,112 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="35u-pH-bmK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1709" y="468"/>
+        </scene>
+        <!--Speaker View Controller-->
+        <scene sceneID="0Jw-nw-9tb">
+            <objects>
+                <viewController id="bna-nM-z1m" customClass="SpeakerViewController" customModule="fisu_app" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="BBe-tu-hID"/>
+                        <viewControllerLayoutGuide type="bottom" id="UX7-R4-D8M"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HjL-z1-cva">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="eventName" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YXe-yN-eel">
+                                <rect key="frame" x="20" y="72" width="560" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="eventDate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l9h-Xr-RTo">
+                                <rect key="frame" x="20" y="101" width="560" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="560" id="HMj-Nr-Jrf"/>
+                                    <constraint firstAttribute="height" constant="25" id="rpo-t2-YWH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Aqa-g3-TUJ">
+                                <rect key="frame" x="171" y="225" width="259" height="198"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="198" id="DcU-Kd-HKn"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="259" id="udi-f5-N0d"/>
+                                </constraints>
+                            </mapView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="eventDescription" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fhy-hh-RRh">
+                                <rect key="frame" x="20" y="163" width="560" height="54"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="54" id="MFq-xU-rG6"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="560" id="VqO-5j-IBF"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="activityType" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TJs-ex-Zlf">
+                                <rect key="frame" x="20" y="134" width="560" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="560" id="CAd-rJ-k3T"/>
+                                    <constraint firstAttribute="height" constant="21" id="yip-b9-3pN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="10" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="roE-Gr-TEB">
+                                <rect key="frame" x="20" y="421" width="560" height="159"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="10" id="7EY-89-w5U">
+                                        <rect key="frame" x="0.0" y="92" width="560" height="10"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7EY-89-w5U" id="DUU-s6-zh3">
+                                            <rect key="frame" x="0.0" y="0.0" width="560" height="9"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="TJs-ex-Zlf" firstAttribute="top" secondItem="l9h-Xr-RTo" secondAttribute="bottom" constant="8" id="1hh-Os-TfF"/>
+                            <constraint firstItem="roE-Gr-TEB" firstAttribute="trailing" secondItem="YXe-yN-eel" secondAttribute="trailing" id="4Hb-G9-bMI"/>
+                            <constraint firstItem="Fhy-hh-RRh" firstAttribute="centerX" secondItem="HjL-z1-cva" secondAttribute="centerX" id="58s-qP-gBt"/>
+                            <constraint firstItem="TJs-ex-Zlf" firstAttribute="centerX" secondItem="HjL-z1-cva" secondAttribute="centerX" id="9Pu-6s-rKy"/>
+                            <constraint firstItem="Fhy-hh-RRh" firstAttribute="top" secondItem="TJs-ex-Zlf" secondAttribute="bottom" constant="8" id="AOK-Ex-ztR"/>
+                            <constraint firstItem="roE-Gr-TEB" firstAttribute="leading" secondItem="YXe-yN-eel" secondAttribute="leading" id="CWW-si-dtL"/>
+                            <constraint firstItem="l9h-Xr-RTo" firstAttribute="top" secondItem="YXe-yN-eel" secondAttribute="bottom" constant="8" id="IrY-L8-q2m"/>
+                            <constraint firstItem="TJs-ex-Zlf" firstAttribute="trailing" secondItem="YXe-yN-eel" secondAttribute="trailing" id="Mjp-wf-cN3"/>
+                            <constraint firstItem="l9h-Xr-RTo" firstAttribute="centerX" secondItem="HjL-z1-cva" secondAttribute="centerX" id="RvE-Dh-y4w"/>
+                            <constraint firstItem="Fhy-hh-RRh" firstAttribute="leading" secondItem="YXe-yN-eel" secondAttribute="leading" id="S3j-Oh-crZ"/>
+                            <constraint firstItem="roE-Gr-TEB" firstAttribute="centerX" secondItem="HjL-z1-cva" secondAttribute="centerX" id="ZnX-9C-8qd"/>
+                            <constraint firstItem="Fhy-hh-RRh" firstAttribute="trailing" secondItem="YXe-yN-eel" secondAttribute="trailing" id="cR5-GS-FJw"/>
+                            <constraint firstItem="Aqa-g3-TUJ" firstAttribute="top" secondItem="Fhy-hh-RRh" secondAttribute="bottom" constant="8" id="djz-8L-uKf"/>
+                            <constraint firstItem="l9h-Xr-RTo" firstAttribute="trailing" secondItem="YXe-yN-eel" secondAttribute="trailing" id="dua-P9-lMQ"/>
+                            <constraint firstItem="TJs-ex-Zlf" firstAttribute="leading" secondItem="YXe-yN-eel" secondAttribute="leading" id="e9s-Cc-JWR"/>
+                            <constraint firstItem="Aqa-g3-TUJ" firstAttribute="centerX" secondItem="HjL-z1-cva" secondAttribute="centerX" id="etR-te-8Ts"/>
+                            <constraint firstItem="YXe-yN-eel" firstAttribute="trailing" secondItem="HjL-z1-cva" secondAttribute="trailingMargin" id="fue-Ow-OJJ"/>
+                            <constraint firstItem="YXe-yN-eel" firstAttribute="leading" secondItem="HjL-z1-cva" secondAttribute="leadingMargin" id="mzi-ua-eCm"/>
+                            <constraint firstItem="YXe-yN-eel" firstAttribute="top" secondItem="BBe-tu-hID" secondAttribute="bottom" constant="8" id="pra-8z-OtL"/>
+                            <constraint firstItem="l9h-Xr-RTo" firstAttribute="leading" secondItem="YXe-yN-eel" secondAttribute="leading" id="qaB-2F-fIm"/>
+                            <constraint firstItem="YXe-yN-eel" firstAttribute="centerX" secondItem="HjL-z1-cva" secondAttribute="centerX" id="wIb-Jd-15P"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="activityType" destination="TJs-ex-Zlf" id="TUw-k8-2wc"/>
+                        <outlet property="eventDate" destination="l9h-Xr-RTo" id="pCz-t1-X59"/>
+                        <outlet property="eventDescription" destination="Fhy-hh-RRh" id="GHB-Tv-aYi"/>
+                        <outlet property="eventName" destination="YXe-yN-eel" id="diK-6a-juY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YdU-pB-wTd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2444" y="468"/>
         </scene>
         <!--Profil View Controller-->
         <scene sceneID="hWC-uv-0LC">
@@ -151,7 +258,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Here are some informations about you:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pgd-lP-ycw">
                                 <rect key="frame" x="152" y="135" width="297" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="1" alpha="0.78000000000000003" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.1176470588" green="0.50196078430000002" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First name: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="37z-Ly-yTd">
@@ -184,7 +291,7 @@
                                     <constraint firstAttribute="width" constant="400" id="8NI-Hf-HVl"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.792156862745098" green="0.40000000000000002" blue="0.023529411764705882" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.20020474922135928" green="0.57100114380615641" blue="0.80793969102792629" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="userFirstName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TvQ-7f-92W">
@@ -193,7 +300,7 @@
                                     <constraint firstAttribute="width" constant="354" id="tiS-Tp-a5s"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.79215686269999996" green="0.40000000000000002" blue="0.023529411760000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.20020474922135928" green="0.57100114380615641" blue="0.80793969102792629" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="userSex" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZoP-q3-0VE">
@@ -202,7 +309,7 @@
                                     <constraint firstAttribute="width" constant="415" id="Wwt-7K-RFp"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.79215686269999996" green="0.40000000000000002" blue="0.023529411760000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.20020474922135928" green="0.57100114380615641" blue="0.80793969102792629" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="userNationality" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XzA-al-l22">
@@ -211,7 +318,7 @@
                                     <constraint firstAttribute="width" constant="352" id="TZQ-HX-fP3"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.79215686269999996" green="0.40000000000000002" blue="0.023529411760000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.20020474922135928" green="0.57100114380615641" blue="0.80793969102792629" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last name: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mRt-A3-dBq">
@@ -226,7 +333,7 @@
                                     <constraint firstAttribute="width" constant="355" id="elh-GN-bgB"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.79215686269999996" green="0.40000000000000002" blue="0.023529411760000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.20020474922135928" green="0.57100114380615641" blue="0.80793969102792629" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="siQ-yh-lXl">
@@ -241,7 +348,7 @@
                                     <constraint firstAttribute="width" constant="391" id="UEr-4h-9gA"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.79215686269999996" green="0.40000000000000002" blue="0.023529411760000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.20020474922135928" green="0.57100114380615641" blue="0.80793969102792629" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
