--- a/fisu-app/Base.lproj/Main.storyboard
+++ b/fisu-app/Base.lproj/Main.storyboard
@@ -137,11 +137,11 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Aqa-g3-TUJ">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Aqa-g3-TUJ">
                                 <rect key="frame" x="171" y="225" width="259" height="198"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="198" id="DcU-Kd-HKn"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="259" id="udi-f5-N0d"/>
+                                    <constraint firstAttribute="width" constant="259" id="hTQ-rY-48T"/>
+                                    <constraint firstAttribute="height" constant="198" id="kIt-9d-cQf"/>
                                 </constraints>
                             </mapView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="eventDescription" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fhy-hh-RRh">
@@ -164,12 +164,15 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="10" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="roE-Gr-TEB">
-                                <rect key="frame" x="20" y="421" width="560" height="159"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="speakersTableView" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="10" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="roE-Gr-TEB" userLabel="Table View Speakers">
+                                <rect key="frame" x="20" y="426" width="560" height="159"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="159" id="QuR-La-yCk"/>
+                                </constraints>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="10" id="7EY-89-w5U">
-                                        <rect key="frame" x="0.0" y="92" width="560" height="10"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="speakerCell" rowHeight="10" id="7EY-89-w5U">
+                                        <rect key="frame" x="0.0" y="28" width="560" height="10"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7EY-89-w5U" id="DUU-s6-zh3">
                                             <rect key="frame" x="0.0" y="0.0" width="560" height="9"/>
@@ -184,6 +187,7 @@
                             <constraint firstItem="TJs-ex-Zlf" firstAttribute="top" secondItem="l9h-Xr-RTo" secondAttribute="bottom" constant="8" id="1hh-Os-TfF"/>
                             <constraint firstItem="roE-Gr-TEB" firstAttribute="trailing" secondItem="YXe-yN-eel" secondAttribute="trailing" id="4Hb-G9-bMI"/>
                             <constraint firstItem="Fhy-hh-RRh" firstAttribute="centerX" secondItem="HjL-z1-cva" secondAttribute="centerX" id="58s-qP-gBt"/>
+                            <constraint firstItem="roE-Gr-TEB" firstAttribute="top" secondItem="Aqa-g3-TUJ" secondAttribute="bottom" constant="3" id="75W-4R-PNw"/>
                             <constraint firstItem="TJs-ex-Zlf" firstAttribute="centerX" secondItem="HjL-z1-cva" secondAttribute="centerX" id="9Pu-6s-rKy"/>
                             <constraint firstItem="Fhy-hh-RRh" firstAttribute="top" secondItem="TJs-ex-Zlf" secondAttribute="bottom" constant="8" id="AOK-Ex-ztR"/>
                             <constraint firstItem="roE-Gr-TEB" firstAttribute="leading" secondItem="YXe-yN-eel" secondAttribute="leading" id="CWW-si-dtL"/>
